temp/lmgc90_dev/src/ChiPy/mailx/wrap_multiMAILx.h

 /**
  * @fn void multiMAILx_UsePicardScheme(void)
  * @brief use Picard scheme (fixed point method)
  *
  * @cond PYDOC
  * python usage : multiMAILx_UsePicardScheme()
  * @endcond
  */
  extern "C" void multiMAILx_UsePicardScheme(void);
 /**
  * @fn void multiMAILx_UseNewtonScheme(void)
  * @brief use Newton scheme
  *
  * @cond PYDOC
  * python usage : multiMAILx_UseNewtonScheme()
  * @endcond
  */
  extern "C" void multiMAILx_UseNewtonScheme(void);
 /**
  * @fn void multiMAILx_WithoutRenumbering(void)
  * @brief skip renumbering of the unknowns using a rcc method 
  *
  * @cond PYDOC
  * python usage : multiMAILx_WithoutRenumbering()
  * @endcond
  */
  extern "C" int multiMAILx_WithoutRenumbering(void);
 /**
  * @fn void multiMAILx_BandStorage(void)
  * @brief use band matrix 
  *
  * @cond PYDOC
  * python usage : multiMAILx_BandStorage()
  * @endcond
  */
  extern "C" int multiMAILx_BandStorage(void);
 /**
  * @fn void multiMAILx_SparseStorage(void)
  * @brief use sparse matrix
  *
  * @cond PYDOC
  * python usage : multiMAILx_SparseStorage()
  * @endcond
  */
  extern "C" int multiMAILx_SparseStorage(void);
 /**
  * @fn void multiMAILx_ExplodedStorage(void)
  * @brief use element by element matrix 
  *
  * @cond PYDOC
  * python usage : multiMAILx_ExplodedStorage()
  * @endcond
  */
  extern "C" int multiMAILx_ExplodedStorage(void);
 /**
  * @fn void multiMAILx_DiagonalStorage(void)
  * @brief use diagonal matrix
  *
  * @cond PYDOC
  * python usage : multiMAILx_DiagonalStorage()
  * @endcond
  */
  extern "C" int multiMAILx_DiagonalStorage(void);
 /**
  * @fn void multiMAILx_SkylineStorage(void)
  * @brief use skyline matrix
  *
  * @cond PYDOC
  * python usage : multiMAILx_SkylineStorage()
  * @endcond
  */
  extern "C" int multiMAILx_SkylineStorage(void);
 /**
  * @fn void multiMAILx_FullStorage(void)
  * @brief use full matrix
  *
  * @cond PYDOC
  * python usage : multiMAILx_FullStorage()
  * @endcond
  */
  extern "C" int multiMAILx_FullStorage(void);
 /**
  * @fn void multiMAILx_SymmetricShape(void)
  * @brief assume matrix is symmetrical
  *
  * @cond PYDOC
  * python usage : multiMAILx_SymmetricShape()
  * @endcond
  */
  extern "C" int multiMAILx_SymmetricShape(void);
 /**
  * @fn void multiMAILx_UnspecifiedShape(void)
  * @brief does not assume any thing on matrix shape
  *
  * @cond PYDOC
  * python usage : multiMAILx_UnspecifiedShape()
  * @endcond
  */
  extern "C" int multiMAILx_UnspecifiedShape(void);
 /**
  * @fn int multiMAILx_GetNb(void)
  * @brief Get the number of multiMAILx
  *
  * @cond PYDOC
  * python usage : nb_multiMAILx = multiMAILx_GetNb()
  *
  * @return nb_multiMAILx (integer) : number of multiMAILx
  * @endcond
  *
  * @cond CDOC
  * @return (int) number of multiMAILx
  * @endcond
  */
  extern "C" int multiMAILx_GetNb(void);
 /**
  * @fn int multiMAILx_GetNbNodes(int ivalue)
  * @brief Get the number of nodes of a multiMAILx
  *
  * @cond PYDOC
  * python usage : nb_nodes = multiMAILx_GetNbNodes(ibdyty)
  * @param[in] ivalue (integer) : id of the multiMAILx
  * @return nb_nodes (integer) : number of nodes of a multiMAILx
  * @endcond
  *
  * @cond CDOC
  * @return (int) number of nodes
  * @endcond
  */
  extern "C" int multiMAILx_GetNbNodes(int ivalue);
 /**
  * @fn int multiMAILx_GetNbElements(int ivalue)
  * @brief Get the number of elements of a multiMAILx
  *
  * @cond PYDOC
  * python usage : nb_elements = multiMAILx_GetNbElements(ibdyty)
  * @param[in] ivalue (integer) : id of the multiMAILx
  * @return nb_nodes (integer) : number of elements of a multiMAILx
  * @endcond
  *
  * @cond CDOC
  * @return (int) number of elements
  * @endcond
  */
  extern "C" int multiMAILx_GetNbElements(int ivalue);
 /**
  * @fn int multiMAILx_IsVisible(int idbdy)
  * @brief return if a given body visible
  *
  * @cond PYDOC
  * python usage : visible = multiMAILx_IsVisible(ibdyty)
  * @param[in] idbdy(integer) : id of the body we want visibility
  * @return visible (integer) : 1 if body is visible, 0 else
  * @endcond
  *
  * @cond CDOC
  * @param[in] idbdy (int) : id of the body we want visibility
  * @return (int) 1 if body is visible, 0 else
  * @endcond
  */
  extern "C" int multiMAILx_IsVisible(int idbdy);
 /**
  * @fn void multiMAILx_GetBodyVector(char * cvalue1_c, int ivalue1, double** matrix_out, int* dim1, int* dim2)
  * @brief Get a copy of a vector of a given body
  *
  * Possible values for datatype field are "X____", "Xbeg_",
  * "V____", "Vbeg_", "Pw___", "Pwbeg", "Pn___", "Pnbeg"
  *
  * @cond PYDOC
  * Python usage : vector = multiMAILx_GetBodyVector(datatype, ibdyty)
  * @param datatype (string of size 5) : the vector to get
  * @param ibdyty (integer)            : rank of considered body
  * @return vector (double 2D-array)   : the desired data
  * @endcond
  *
  * @cond CDOC
  * @param[in] cvalue1 (char[5])      : the vector to get
  * @param[in] ivalue1 (int)          : id of considered body
  * @param[out] matrix_out (double**) : the vector to get
  * @param[out] dim1 (int*)           : first dimension of matrix_out
  * @param[out] dim2 (int*)           : second dimension of matrix_out
  * @endcond
  *
  * Possible values for datatype field are:
  * - "Coor0": reference coordinates
  * - "X____": cumulated displacements over time in computed configuration
  * - "Xbeg_": cumulated displacements over time at beginning of time step
  * - "V____": velocity in computed configuration
  * - "Vbeg_": velocity at beginning of time step
  * - "Pcbeg": pressure of 1st fluid at beginning of time step
  * - "Pc___": pressure of 1st fluid in computed configuration
  * - "Pnbeg": pressure of 2nd fluid at beginning of time step
  * - "Pn___": pressure of 2nd fluid in computed configuration
  * - "U_Fex": external forces
  * - "PcFex": external pressure for 1st fluid
  * - "PnFex": external pressure for 2nd fluid
  * - "U_Fin": internal forces
  * - "PcFin": internal pressure for 1st fluid
  * - "PnFin": internal pressure for 2nd fluid
  * - "U_Fdp":
  * - "PcFdp":
  * - "PnFdp":
  * - "U_Fdy":
  * - "PcFdy":
  * - "PnFdy":
  *
  */
  extern "C" void multiMAILx_GetBodyVector(char * cvalue1_c, int ivalue1, double** matrix_out, int* dim1, int* dim2);
 /**
  * @fn void multiMAILx_PutBodyVector(char * cvalue1_c, int ivalue1, double * matrix_in, int dim1, int dim2)
  * @brief Set a vector of a given body
  *
  * @cond PYDOC
  * python usage : multiMAILx_PutBodyVector(datatype, ibdyty, matrix)
  * @param[in] datatype (string of size 5) : the vector to set
  * @param[in] ibdyty (integer)            : rank of body
  * @param[in] matrix (double array)       : the new values
  * @endcond
  *
  * @cond CDOC
  * @param[in] cvalue1 (char[5])    : the vector to set
  * @param[in] ivalue1 (int)        : id of considered body
  * @param[in] matrix_in (double *) : the new values
  * @param[in] dim1 (int)           : first dimension of matrix_in (in C sense)
  * @param[in] dim2 (int)           : second dimension of matrix_in (in C sense)
  * @endcond
  *
  * Possible values for datatype field are:
  * - "X____": cumulated displacements over time in computed configuration
  * - "Xbeg_": cumulated displacements over time at beginning of time step
  * - "V____": velocity in computed configuration
  * - "Vbeg_": velocity at beginning of time step
  * - "Pcbeg": pressure of 1st fluid at beginning of time step
  * - "Pc___": pressure of 1st fluid in computed configuration
  * - "Pnbeg": pressure of 2nd fluid at beginning of time step
  * - "Pn___": pressure of 2nd fluid in computed configuration
  */
  extern "C" void multiMAILx_PutBodyVector(char * cvalue1_c, int ivalue1, double* matrix_in, int dim1, int dim2);
 /**
  * @fn void multiMAILx_ReadDrivenDof(void)
  * @brief Read DRV_DOF.DAT
  *
  * @cond PYDOC
  * python usage : multiMAILx_ReadDrivenDof()
  * @endcond
  */
  extern "C" void multiMAILx_ReadDrivenDof(void);
    
 /**
  * @fn void multiMAILx_WriteDrivenDof(void)
  * @brief Write DRV_DOF.OUT
  *
  * @cond PYDOC
  * python usage : multiMAILx_WriteDrivenDof()
  * @endcond
  */
  extern "C" void multiMAILx_WriteDrivenDof(void);
 /**
  * @fn void multiMAILx_ReadIniGPV(int num=0)
  * @brief Read GPV file
  *
  * If num <= 0 : DATBOX/GPV.INI file is read
  *
  * Else : OUTBOX/GPV.OUT.num is read, num being
  * the parameter used in TimeEvolution_ReadIniGPV
  * last call
  *
  * @cond PYDOC
  * python usage : multiMAILx_ReadIniGPV(num=0)
  * @param[in] num (integer) : which GPV file to read
  * @endcond
  *
  * @cond CDOC
  * @param[in] num (int) : which GPV file to read
  * @endcond
  *
  */
  extern "C" void multiMAILx_ReadIniGPV(int num=0);
 /**
  * @fn void multiMAILx_ReadIniDof(int num=0)
  * @brief Read DOF file
  *
  * If num <= 0 : DATBOX/DOF.INI file is read
  *
  * Else : OUTBOX/DOF.OUT.num is read, num being
  * the parameter used in TimeEvolution_ReadIniDof
  * last call
  *
  * @cond PYDOC
  * python usage : multiMAILx_ReadIniDof(num=0)
  * @param[in] num (integer) : which DOF file to read
  * @endcond
  *
  * @cond CDOC
  * @param[in] num (int) : which DOF file to read
  * @endcond
  *
  */
  extern "C" void multiMAILx_ReadIniDof(int num=0);
 /**
  * @fn void multiMAILx_WriteLastDof(int * ivector_in=nullptr, int ilength_in=0)
  * @brief Write DOF.LAST file
  *
  * @cond PYDOC
  * python usage : multiMAILx_WriteLastDof(i_list)
  * @param[in] i_list (list of integer) : list of bodies to write dof
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_WriteLastDof(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void multiMAILx_WriteOutDof(int * ivector_in=nullptr, int ilength_in=0)
  * @brief Write DOF.OUT file
  *
  * @cond PYDOC
  * python usage : multiMAILx_WriteOutDof(i_list)
  * @param[in] i_list (list of integer) : list of bodies to write dof
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of multiMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void multiMAILx_WriteOutDof(int * ivector_in=nullptr, int ilength_in=0);