external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_multiMAILx.f90

!===========================================================================
!
! Copyright 2000-2025 CNRS-UM.
!
! This file is part of a software (LMGC90) which is a computer program 
! which purpose is to modelize interaction problems (contact, multi-Physics,etc).
!
! This software is governed by the CeCILL license under French law and
! abiding by the rules of distribution of free software.  You can  use, 
! modify and/ or redistribute the software under the terms of the CeCILL
! license as circulated by CEA, CNRS and INRIA at the following URL
! "http://www.cecill.info". 
!
! As a counterpart to the access to the source code and  rights to copy,
! modify and redistribute granted by the license, users are provided only
! with a limited warranty  and the software's author,  the holder of the
! economic rights,  and the successive licensors  have only  limited
! liability. 
!
! In this respect, the user's attention is drawn to the risks associated
! with loading,  using,  modifying and/or developing or reproducing the
! software by the user in light of its specific status of free software,
! that may mean  that it is complicated to manipulate,  and  that  also
! therefore means  that it is reserved for developers  and  experienced
! professionals having in-depth computer knowledge. Users are therefore
! encouraged to load and test the software's suitability as regards their
! requirements in conditions enabling the security of their systems and/or 
! data to be ensured and,  more generally, to use and operate it in the 
! same conditions as regards security. 
!
! The fact that you are presently reading this means that you have had
! knowledge of the CeCILL license and that you accept its terms.
!
! To report bugs, suggest enhancements, etc. to the Authors, contact
! Frederic Dubois.
!
! frederic.dubois@umontpellier.fr
!
!===========================================================================
module wrap_multiMAILx                                       

  use ISO_C_BINDING

  use multiMAILx, only: is_new                              , &
                        get_nb_multiMAILx                   , &
                        get_nb_nodes_multiMAILx             , &
                        get_nb_elements_multiMAILx          , &
                        get_visibility_multiMAILx           , &
                        get_vector_multiMAILx               , &
                        set_vector_multiMAILx               , &
                        read_in_driven_dof_multiMAILx       , &
                        write_out_driven_dof_multiMAILx     , &
                        read_in_gpv_multiMAILx              , &
                        read_in_dof_multiMAILx              , &
                        write_xxx_dof_multiMAILx            , &
                        load_behaviours_multiMAILx          , &
                        load_models_multiMAILx              , &
                        update_existing_entities_multiMAILx , &
                        push_ppset_multiMAILx               , &
                        increment_multiMAILx                , &
                        compute_mass_multiMAILx             , &
                        compute_bulk_multiMAILx             , &
                        compute_flux_multiMAILx             , &
                        compute_damping_multiMAILx          , &
                        compute_Fext_multiMAILx             , &
                        compute_flourxces_multiMAILx        , &
                        assemb_KT_multiMAILx                , &
                        assemb_RHS_multiMAILx               , &
                        compute_free_state_multiMAILx       , &
                        compute_dof_multiMAILx              , &
                        compute_residue_norm_multiMAILx     , &
                        update_bulk_multiMAILx              , &
                        update_dof_multiMAILx               , &
                        apply_drvdof_KT_multiMAILx          , &
                        get_field_rank                      , &
                        set_field_bynode, set_field_byelem  , &
                        get_vfield_rank                     , &
                        set_vfield_bynode, set_vfield_byelem, &
                        get_connectivities_multiMAILx       , &
                        get_coor_multiMAILx                 , &
                        get_all_multiMAILx                  , &
                        get_elements_volume                 , &
                        get_elements_neighbor               , &
                        get_ptr_elements_energy             , &
                        get_ptr_elements_jacobian           , &
                        get_ptr_elements_visibility         , &
                        get_ptr_boundary_elements           , &
                        compute_elements_energy             , &
                        compute_elements_jacobian           , &
                        get_deformation_energy              , &
                        set_Matrix_Storage_multiMAILx       , &
                        clean_memory_multiMAILx             , &
                        set_Matrix_Storage_multiMAILx       , &
                        set_Matrix_Shape_multiMAILx         , &
                        set_without_renum_multiMAILx

                         

  use utilities, only: faterr, logmes

CONTAINS
!----------------------------------------------------

    SUBROUTINE WithoutRenumbering() bind(c, name='multiMAILx_WithoutRenumbering')
      IMPLICIT NONE

       CALL set_without_renum_multiMAILx()

    END SUBROUTINE

    SUBROUTINE BandStorage() bind(c, name='multiMAILx_BandStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_multiMAILx('band____')

    END SUBROUTINE

    SUBROUTINE SparseStorage() bind(c, name='multiMAILx_SparseStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_multiMAILx('sparse__')

    END SUBROUTINE

    SUBROUTINE ExplodedStorage() bind(c, name='multiMAILx_ExplodedStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_multiMAILx('exploded')

    END SUBROUTINE


    SUBROUTINE DiagonalStorage() bind(c, name='multiMAILx_DiagonalStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_multiMAILx('diagonal')

    END SUBROUTINE

    SUBROUTINE SkylineStorage() bind(c, name='multiMAILx_SkylineStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_multiMAILx('skyline_')

    END SUBROUTINE

    SUBROUTINE FullStorage() bind(c, name='multiMAILx_FullStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_multiMAILx('full____')

    END SUBROUTINE

    SUBROUTINE SymmetricShape() bind(c, name='multiMAILx_SymmetricShape')
      IMPLICIT NONE

       CALL set_Matrix_Shape_multiMAILx('sym_____')

    END SUBROUTINE

    SUBROUTINE UnspecifiedShape() bind(c, name='multiMAILx_UnspecifiedShape')
      IMPLICIT NONE

       CALL set_Matrix_Shape_multiMAILx('std_____')

    END SUBROUTINE


  subroutine UsePicardScheme() bind(c, name='multiMAILx_UsePicardScheme')
    implicit none

    is_new = .true.

  end subroutine

  subroutine UseNewtonScheme() bind(c, name='multiMAILx_UseNewtonScheme')
    implicit none

    is_new = .false.

  end subroutine

!-----------------------------------------------------
!  accessors
!-----------------------------------------------------

  function GetNbMultiMAILx() bind(c, name='multiMAILx_GetNb')
     implicit none
     integer(c_int) :: GetNbMultiMAILx

     GetNbMultiMAILx = get_nb_multiMAILx()

  end function GetNbMultiMAILx

  function GetNbNodes(ibdyty) bind(c, name='multiMAILx_GetNbNodes')
     implicit none
     integer(c_int),value :: ibdyty
     integer(c_int) :: GetNbNodes

     GetNbNodes = get_nb_nodes_multiMAILx(ibdyty)

  end function GetNbNodes

  function GetNbElements(ibdyty) bind(c, name='multiMAILx_GetNbElements')
     implicit none
     integer(c_int),value :: ibdyty
     integer(c_int) :: GetNbElements

     GetNbElements = get_nb_elements_multiMAILx(ibdyty)

  end function GetNbElements

  function IsVisibleMultiMAILx(i_bdyty) bind(c, name='multiMAILx_IsVisible')
     implicit none
     integer(c_int), intent(in), value :: i_bdyty
     integer(c_int) :: IsVisibleMultiMAILx

     if(get_visibility_multiMAILx(i_bdyty)) then
       IsVisibleMultiMAILx = 1
     else
       IsVisibleMultiMAILx = 0
     end if

  end function

  subroutine GetVector(cvalue1_c,ivalue1,rvect,ivalue2,ivalue3) bind(c, name='multiMAILx_GetBodyVector')
    use overall, only: nbDIME
    IMPLICIT NONE
    character(c_char),dimension(5),intent(in) :: cvalue1_c
    integer(c_int), intent(in), value         :: ivalue1
    integer(c_int)                            :: ivalue2, ivalue3
    type(c_ptr)                               :: rvect
    !
    real(kind=8), dimension(:,:), pointer :: vector
    character(len=5) :: cvalue1
    integer :: i

    cvalue1 = ''
    do i=1,5
      cvalue1 = cvalue1(1:i-1) // cvalue1_c(i)
    end do

    ! \todo: there is probably a better way to do so...
    if( cvalue1(1:1)=='P' ) then
      ivalue2 = 1
    else
      ivalue2 = nbDIME
    end if
    ivalue3 = get_nb_nodes_multiMAILx(ivalue1)
    allocate(vector(ivalue2,ivalue3))
    call get_vector_multiMAILx(cvalue1,ivalue1,vector,ivalue2,ivalue3)

    rvect = c_loc(vector(1,1))

  end subroutine

  subroutine SetVector(cvalue1_c,ivalue1,rvect,ivalue2,ivalue3) bind(c, name='multiMAILx_PutBodyVector')
    implicit none
    character(c_char), intent(in), dimension(5) :: cvalue1_c
    integer(c_int)   , intent(in), value        :: ivalue1, ivalue2, ivalue3
    type(c_ptr), value :: rvect
    !
    real(kind=8), dimension(:,:), pointer :: matrix
    character(len=5) :: cvalue1
    integer :: i

    cvalue1 = ''
    do i=1,5
      cvalue1 = cvalue1(1:i-1) // cvalue1_c(i)
    end do

    !\WARNING: sizes are inverted to insure consistency with get and indices switch due to C
    call c_f_pointer(cptr=rvect, fptr=matrix, shape=(/ivalue3,ivalue2/))
    call set_vector_multiMAILx(cvalue1,ivalue1,matrix,ivalue3,ivalue2)

  end subroutine

!-----------------------------------------------------
!  reading, writting and loading
!-----------------------------------------------------

  subroutine ReadDrivenDof() bind(c, name='multiMAILx_ReadDrivenDof')
    implicit none

    call read_in_driven_dof_multiMAILx

  end subroutine
  
  subroutine WriteDrivenDof() bind(c, name='multiMAILx_WriteDrivenDof')
    implicit none

    call write_out_driven_dof_multiMAILx

  end subroutine

  subroutine ReadIniGPV(step) bind(c, name='multiMAILx_ReadIniGPV')
     implicit none
     integer(c_int), intent(in), value :: step

     call read_in_gpv_multiMAILx(step)

  end subroutine

  subroutine ReadIniDof(step) bind(c, name='multiMAILx_ReadIniDof')
     implicit none
     integer(c_int), intent(in), value :: step

     call read_in_dof_multiMAILx(step)

  end subroutine

  subroutine WriteLastDof(list_ids, length) bind(c, name='multiMAILx_WriteLastDof')
    implicit none
    type(c_ptr)   , intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), dimension(:), pointer :: list

    if( length == 0 ) then  
      do i = 1, get_nb_multiMAILx()
        call write_xxx_dof_multiMAILx(2,i)
      end do
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      do i = 1, length
        call write_xxx_dof_multiMAILx(2,list(i))
      end do
    end if

  end subroutine

  subroutine WriteOutDof(list_ids, length) bind(c, name='multiMAILx_WriteOutDof')
    implicit none
    type(c_ptr)   , intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), dimension(:), pointer :: list
